--- a/vision.css
+++ b/vision.css
@@ -1,8 +1,3 @@
-* {
-  box-sizing: border-box;
-  /* padding: 0;
-  margin: 0; */
-}
 body {
   padding: 0;
   margin: 0;
@@ -27,14 +22,25 @@ body {
 .head-content {
   font-size: 24px;
 }
-
 .container {
-  padding: 24px;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 16px;
 }
-.cont-head {
-  font-size: 36px;
+.side-head {
+  padding: 2px;
+  background-color: silver;
+  font-size: 24px;
+  border-left: 5px solid darkviolet;
 }
-.cont-para {
-  font-size: 18px;
-  line-height: 2;
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  background-color: violet;
+  font-size: 32px;
+  color: white;
 }
