--- a/bitatglance.css
+++ b/bitatglance.css
@@ -22,6 +22,13 @@ body {
   font-weight: bold;
 }
 .head-title {
+  background-color: darkviolet;
+  padding: 5px;
+  padding-left: 25px;
+  padding-right: 25px;
+  display: inline-block;
+  border-left: 8px solid orange;
+  border-right: 8px solid orange;
   font-size: 32px;
 }
 .head-content {
